# rethinking-park-backend-api

./: .env.example  .gitignore  .pre-commit-config.yaml  =1.24.0  CODE_QUALITY_SUMMARY.md  DEPLOYMENT_FIX_REPORT.md  DEPLOYMENT_STATUS_SUMMARY.md  DEPLOY_TO_GITHUB.md  Dockerfile  Dockerfile.simple  FINAL_API_STATUS_REPORT.md  Makefile  README.md  REAL_IMAGE_TEST_REPORT.md  REFACTORING_VALIDATION_SUMMARY.md  TASK10_IMPLEMENTATION_SUMMARY.md  TASK4_IMPLEMENTATION_SUMMARY.md  TASK5_IMPLEMENTATION_SUMMARY.md  TASK6_4_IMPLEMENTATION_SUMMARY.md  TASK6_5_IMPLEMENTATION_SUMMARY.md  TASK9_IMPLEMENTATION_SUMMARY.md  URGENT_FIX_SUMMARY.md  config.py  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  simple_test.py  structural_validation.py  test-docker.sh  test_api_integration.py  test_batch_imports.py  test_batch_processing.py  test_deployment_simple.py  test_docker_fix.py  test_download_annotated_comprehensive.py  test_download_annotated_endpoint.py  (+36 more)
.github/workflows/: quality-check.yml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  admin.py  analysis.py  batch.py  health.py  images.py
app/config/: __init__.py  app.py  base.py  cache.py  database.py  external.py  loader.py  settings.py
app/core/: error_monitoring.py  exceptions.py  middleware.py
app/models/: README.md  __init__.py  analysis.py  base.py  image.py  validators.py
app/services/: __init__.py  base.py  dependencies.py
app/services/cache/: __init__.py  redis_cache.py
app/services/image/: __init__.py  processing.py
app/services/vision/: __init__.py  google_vision.py
config/: local.env  production.env  staging.env
deployment/: docker-compose.dev.yml  docker-compose.staging.yml  fluent-bit.conf  nginx.conf  production.yml  prometheus.yml
docs/: quick-start.md
docs/api/: README.md
docs/deployment/: README.md  google-cloud-setup.md  troubleshooting.md
docs/development/: README.md  code-quality.md  configuration.md  quick-start.md  unified-error-handling.md
models/: image.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: run.sh
scripts/deployment/: deploy_dev.sh  deploy_production.sh  deploy_staging.sh  validate_deployment.py
scripts/maintenance/: fix_code_quality.py  optimize_imports.py  organize_tests.py  validate_improvements.py  verify_download_annotated.py  verify_enhanced_implementation.py  verify_natural_elements_implementation.py
scripts/setup/: setup.sh  setup_quality_tools.sh
scripts/testing/: run_tests.py  test-docker.sh
services/: batch_processing_service.py  cache_service.py  enhanced_vision_service.py  error_handling.py  face_detection_service.py  gcs_service.py  hash_service.py  image_annotation_service.py  image_processing_service.py  label_analysis_service.py  monitoring_service.py  natural_element_analyzer.py  performance_optimizer.py  rate_limiter.py  storage_service.py  vision_service.py
tests/: conftest.py  test_config.py  utils.py
tests/data/: __init__.py
tests/e2e/: __init__.py
tests/e2e/test_workflows/: __init__.py  test_batch_imports.py  test_deployment_after_fix.py  test_deployment_simple.py  test_docker_fix.py  test_local_deployment.py  test_performance_optimization.py  test_performance_simple.py  test_production_api.py  test_real_image_simple.py  test_refactored_structure.py  test_task3_implementation.py  test_with_real_images.py
tests/integration/test_api/: __init__.py  test_api_integration.py  test_download_annotated_comprehensive.py  test_download_annotated_endpoint.py  test_download_annotated_simple.py  test_enhanced_detection.py  test_enhanced_detection_api.py  test_label_analysis_endpoint.py  test_label_endpoint_simple.py  test_natural_elements_endpoint.py  test_natural_elements_simple.py
tests/integration/test_services/: __init__.py  test_batch_processing.py  test_config_system.py  test_enhanced_cache_system.py  test_enhanced_features.py  test_enhanced_setup.py  test_gcp.py  test_image_processing_services.py  test_integration_natural_elements.py  test_integration_simple.py  test_label_analysis_integration.py  test_natural_elements_analysis.py  test_unified_error_handling.py
tests/unit/test_core/: test_error_monitoring.py  test_exceptions.py
tests/unit/test_models/: __init__.py  test_enhanced_models.py  test_model_structure.py  test_models_only.py
tests/unit/test_services/: __init__.py  test_error_handling.py  test_image_processing_unit.py
tests/unit/test_utils/: __init__.py  test_imports.py  test_syntax_fix.py
tests/utils/: helpers.py
utils/: test_client.py
